# phi-gateway

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  DEPLOY.md  DESIGN.md  Dockerfile  IMPLEMENTATION-PLAN.md  LICENSE  OPS.md  PRODUCTION.md  README.md  alembic.ini  auto-update.sh  caddy-snippet.conf  deploy.sh  docker-compose.vps.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
alembic/: env.py
alembic/versions/: 38d84e7f0dc0_add_conversations_messages.py  6e70bf36e4f8_add_tools_kb_documents.py  e0e07ecf2b89_initial_api_keys_llm_requests.py
deploy/: phi-gateway-update.service  phi-gateway-update.timer  phi-gateway.service
docs/: 01-research.md  02-architecture.md  03-decisions.md  04-implementation.md  codebase-audit.md
scripts/: backup-db.sh  check_docstrings.py
src/phi_gateway/: __init__.py  __main__.py  config.py  database.py  dependencies.py  log_config.py  main.py  models_catalog.py
src/phi_gateway/api/: __init__.py  chat.py  dashboard.py  embeddings.py  keys.py  knowledge.py  mcp.py  memory.py  models.py  router.py  tools.py  usage.py
src/phi_gateway/core/: __init__.py  cost_tracker.py  embedding.py  exceptions.py  llm_proxy.py  rate_limiter.py  security.py  url_safety.py
src/phi_gateway/dashboard/: __init__.py  static_pages.py
src/phi_gateway/dashboard/templates/: base.html  docs.html  keys.html  keys_table.html  login.html  memory.html  overview.html  usage.html
src/phi_gateway/models/: __init__.py  api_key.py  base.py  document.py  llm_request.py  memory.py  tool.py
src/phi_gateway/schemas/: __init__.py  chat.py  errors.py  keys.py  knowledge.py  mcp.py  memory.py  tools.py  usage.py
src/phi_gateway/services/: __init__.py  kb_service.py  llm_service.py  memory_service.py  tool_service.py  usage_service.py
srv/landing/: deploy.md  index.html
srv/landing/docs/: index.md
srv/landing/docs/id/: index.md
tests/: __init__.py  conftest.py
tests/integration/: test_api_flow.py  test_body_limit.py  test_chat.py  test_dashboard.py  test_embeddings.py  test_error_handling.py  test_health.py  test_kb.py  test_keys.py  test_mcp.py  test_memory.py  test_phase2.py  test_request_id.py  test_security_headers.py  test_tools.py  test_usage.py
tests/production/: __init__.py  test_smoke.py
tests/unit/: test_config.py  test_cost_tracker.py  test_llm_proxy_fallback.py  test_log_config.py  test_models_catalog.py  test_rate_limiter.py  test_security.py
