[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phi-gateway"
version = "0.1.0"
description = "Self-hosted AI gateway — LLM proxy, MCP tool registry, RAG knowledge base, agent memory"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Reihan Pandanarang", email = "mreihanpandanarang@gmail.com"},
]
keywords = ["llm", "ai", "gateway", "api", "openai", "anthropic", "mcp", "rag", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "starlette<1.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "groq>=0.15.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "jinja2>=3.0.0",
]

[project.urls]
Documentation = "https://github.com/raindragon14/phi-gateway"
Repository = "https://github.com/raindragon14/phi-gateway"
Issues = "https://github.com/raindragon14/phi-gateway/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phi_gateway = ["dashboard/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
