[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phi-gateway"
version = "0.2.0"
description = "Self-hosted AI gateway — LLM proxy, MCP tool registry, RAG knowledge base, agent memory. One API, zero lock-in."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Reihan Pandanarang", email = "mrpandanarang@gmail.com"},
]
keywords = ["llm", "ai", "gateway", "proxy", "mcp", "rag", "agent", "openai", "anthropic", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "starlette<1.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "groq>=0.15.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "jinja2>=3.0.0",
]

[project.urls]
Documentation = "https://github.com/raindragon14/phi-gateway"
Repository = "https://github.com/raindragon14/phi-gateway"
Issues = "https://github.com/raindragon14/phi-gateway/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
phi-gateway = "phi_gateway.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phi_gateway = ["dashboard/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
